// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/widgets/admin_console/FormattedAdminHeader render component with all props 1`] = `
<AdminHeader>
  <injectIntl(FormattedMarkdownMessage)
    defaultMessage="default message"
    id="string.id"
    values={
      Object {
        "a_key": "a_value",
      }
    }
  />
</AdminHeader>
`;

exports[`components/widgets/admin_console/FormattedAdminHeader render component with required props 1`] = `
<AdminHeader>
  <injectIntl(FormattedMarkdownMessage)
    defaultMessage="default message"
    id="string.id"
    values={Object {}}
  />
</AdminHeader>
`;
